# ferrolabs-python-sdk

./: AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODO.md  main.txt  pyproject.toml
.github/: copilot-instructions.md  release.yml
.github/workflows/: ci.yml  publish-langchain-ferrolabsai.yml  publish-llama-index-llms-ferrolabsai.yml
docs/: architecture.md
ferrolabsai/: __init__.py  _version.py  client.py  types.py
ferrolabsai/admin/: __init__.py  async_resource.py  resource.py
ferrolabsai/completions/: __init__.py  async_resource.py  resource.py
ferrolabsai/embeddings/: __init__.py  async_resource.py  resource.py
ferrolabsai/exceptions/: __init__.py
ferrolabsai/images/: __init__.py  async_resource.py  resource.py
ferrolabsai/models/: __init__.py  async_resource.py  resource.py
integrations/: README.md
integrations/langchain-ferrolabsai/: CHANGELOG.md  README.md  pyproject.toml
integrations/langchain-ferrolabsai/langchain_ferrolabsai/: __init__.py  _messages.py  chat_models.py  embeddings.py  llms.py
integrations/langchain-ferrolabsai/tests/: conftest.py  test_chat_models.py  test_embeddings.py  test_llms.py  test_placeholder.py
integrations/llama-index-llms-ferrolabsai/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
integrations/llama-index-llms-ferrolabsai/llama_index/llms/ferrolabsai/: __init__.py
integrations/llama-index-llms-ferrolabsai/tests/: test_placeholder.py
tests/: test_sdk.py
